--- a/termproject/static/scss/_large.scss
+++ b/termproject/static/scss/_large.scss
@@ -29,6 +29,7 @@ body {
     grid-template-rows: fit-content(115px) fit-content(100%) fit-content(100%);
     grid-row-gap: 0;
     grid-gap: 0;
+    /*overflow-x: hidden;*/
 }
 
 header,
@@ -138,7 +139,6 @@ nav {
         background: $bg-rgba;
         clear: both;
         width: 100%;
-        overflow: visible !important;
         z-index: 1000;
     }
 
@@ -176,6 +176,7 @@ main.home {
 
 main.main-reservation,
 main.main-contact-page {
+    margin: 0;
 
     .reservation,
     .contact-page {
@@ -183,9 +184,16 @@ main.main-contact-page {
     }
 }
 
-main {
+/* IMPORTANT: Troubleshooting horizontal overflow
+.slide-content .scroller {
+    width: 1024px;
+}
 
-    border: $border;
+* {
+    border: 1px solid #f00 !important;
+}*/
+
+main {
 
     /* home */
     >div {
